MTDSA-29660 Fix OAS for Accounting Type endpoints

--- a/resources/public/api/conf/2.0/accounting_type.yaml
+++ b/resources/public/api/conf/2.0/accounting_type.yaml
@@ -10,4 +10,4 @@ get:
   summary: Retrieve Accounting Type
   security:
     - User-Restricted:
-        - write:self-assessment
+        - read:self-assessment
