Retrieve Periods Of Account OAS

--- a/resources/public/api/conf/2.0/common/pathParameters.yaml
+++ b/resources/public/api/conf/2.0/common/pathParameters.yaml
@@ -38,5 +38,16 @@ components:
       schema:
         type: string
         pattern: ^2[0-9]{3}-[0-9]{2}$
+        example: "2024-25"
+      required: true
+    periodsOfAccountTypeTaxYear:
+      name: taxYear
+      in: path
+      description: |
+        The tax year the data applies to. The start year and end year must not span two tax years. 
+        The minimum tax year is 2025-26. No gaps are allowed, for example, 2025-27 is not valid.
+      schema:
+        type: string
+        pattern: ^2[0-9]{3}-[0-9]{2}$
         example: "2025-26"
       required: true
