--- a/resources/public/api/conf/2.0/retrieve_periods_of_account.yaml
+++ b/resources/public/api/conf/2.0/retrieve_periods_of_account.yaml
@@ -7,6 +7,7 @@ description: |
   | Header Value (Gov-Test-Scenario) | Scenario                                                         |
   | -------------------------------- | ---------------------------------------------------------------- |
   | N/A - DEFAULT                    | Simulate a successful response                                   |
+  | NO_DATES                         | Simulate a successful response with no periods of account        |
   | NOT_FOUND                        | Simulate a scenario where no data is found.                      |
   | STATEFUL                         | Performs a stateful submission of the request that is submitted. |
 
