[MTDSA-30192]: Add controller for retrieve Accounting type

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -99,6 +99,7 @@ api {
     retrieve-business-details = true
     create-amend-quarterly-period-type = true
     update-accounting-type = false
+    retrieve-accounting-type = false
     create-or-update-periods-of-account = true
   }
 
