MTDSA-30187 Add Validator and Controller for Create Update Periods Of Account + cleanup
MTDSA-30187 Add Validator and Controller for Create Update Periods Of Account + cleanup

MTDSA-30187 Add Validator and Controller for Create Update Periods Of Account + cleanup

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -98,7 +98,8 @@ api {
     list-all-businesses = true
     retrieve-business-details = true
     create-amend-quarterly-period-type = true
-    update-accounting-type = false # check if supporting agents are allowed
+    update-accounting-type = false
+    create-or-update-periods-of-account = true
   }
 
 
