--- a/conf/application.conf
+++ b/conf/application.conf
@@ -100,6 +100,7 @@ api {
     create-amend-quarterly-period-type = true
     update-accounting-type = false
     create-or-update-periods-of-account = true
+    retrieve-periods-of-account = true
   }
 
 
