[MTDSA-30207] - retrieve periods of account controler and routes (#197)

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -101,6 +101,7 @@ api {
     update-accounting-type = false
     retrieve-accounting-type = false
     create-or-update-periods-of-account = true
+    retrieve-periods-of-account = true
   }
 
 
