[MTDSA-29920]: Update Retrieve Periods of Account API description

--- a/resources/public/api/conf/2.0/retrieve_periods_of_account.yaml
+++ b/resources/public/api/conf/2.0/retrieve_periods_of_account.yaml
@@ -1,6 +1,6 @@
 summary: Retrieve Periods of Account
 description: |
-  This API is used to retrieve a customers Periods of Account and can submit the Periods of Account dates.
+  This API is used to retrieve a customers Periods of Account and Periods of Account dates.
   A National Insurance number, business ID and tax year must be provided.
 
   ### Test data
