--- a/resources/public/api/conf/2.0/common/errors.yaml
+++ b/resources/public/api/conf/2.0/common/errors.yaml
@@ -78,7 +78,7 @@ components:
         Period of account end dates cannot be greater than the income source cessation date.
       value:
         code: RULE_CESSATION_DATE
-        message: One of more of the supplied periods of account end dates exceeds the business cessation date
+        message: One or more of the supplied periods of account end dates exceeds the business cessation date
 
     ruleTaxYearRangeInvalid:
       description: |
