MTDSA-30735: connector and service updated

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -140,6 +140,7 @@ feature-switch {
   }
 
   ifs_hip_migration_1171.enabled = true
+  ifs_hip_migration_2089.enabled = true
 }
 
 # Tax year config
