MTDSA-30166 Added suspend-temporal-validations header

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -129,6 +129,8 @@ feature-switch {
     released-in-production = false
   }
 
+
+
   scp005a_QuarterlyTypeChoice {
      enabled = true
      released-in-production = false
@@ -139,6 +141,7 @@ feature-switch {
      released-in-production = false
   }
 
+  allowTemporalValidationSuspension.enabled = true
   ifs_hip_migration_1171.enabled = true
 }
 
