update 422 error wording

--- a/resources/public/api/conf/2.0/common/errors.yaml
+++ b/resources/public/api/conf/2.0/common/errors.yaml
@@ -178,3 +178,10 @@ components:
       value:
         code: RULE_REQUEST_CANNOT_BE_FULFILLED
         message: Custom (will vary in production depending on the actual error)
+
+    ruleRequestCannotBeFulfilledQRT:
+      description: |
+        Reporting type can only be changed for self-employment and property income sources
+      value:
+        code: RULE_REQUEST_CANNOT_BE_FULFILLED
+        message: Request cannot proceed for this income source type
