Disapply Late Accounting Date Rule OAS

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -86,6 +86,9 @@ api {
         api-released-in-production = true
         allow-request-cannot-be-fulfilled-header = true
     }
+    endpoints.released-in-production {
+      disapply-late-accounting-date-rule = false
+    }
   }
 
   confidence-level-check {
@@ -144,6 +147,8 @@ feature-switch {
   allowTemporalValidationSuspension.enabled = true
   ifs_hip_migration_1171.enabled = true
   ifs_hip_migration_2089.enabled = true
+
+  late-accounting-date-rule.enabled = true
 }
 
 # Tax year config
