--- a/resources/public/api/conf/2.0/late_accounting_date_rule.yaml
+++ b/resources/public/api/conf/2.0/late_accounting_date_rule.yaml
@@ -4,3 +4,10 @@ post:
   security:
     - User-Restricted:
         - write:self-assessment
+
+delete:
+  $ref: "./delete_late_accounting_date_rule.yaml"
+  summary: Delete Late Accounting Date Rule{{#maybeTestOnly "2.0 delete-late-accounting-date-rule"}}{{/maybeTestOnly}}
+  security:
+    - User-Restricted:
+        - write:self-assessment
