[MTDSA-30977]: update the delete_late_accounting_date_rule path in OAS

--- a/resources/public/api/conf/2.0/application.yaml
+++ b/resources/public/api/conf/2.0/application.yaml
@@ -71,7 +71,10 @@ paths:
     $ref: "./accounting_type.yaml"
   /individuals/business/details/{nino}/{businessId}/{taxYear}/periods-of-account:
     $ref: "./periods_of_account.yaml"
-# {{#if (enabled 'late-accounting-date-rule')}}
+  # {{#if (enabled 'late-accounting-date-rule')}}
   /individuals/business/details/{nino}/{businessId}/{taxYear}/late-accounting-date-rule-election/disapply:
     $ref: "./late_accounting_date_rule.yaml"
-# {{/if}}
+  /individuals/business/details/{nino}/{businessId}/{taxYear}/late-accounting-date-rule-election/withdraw:
+    $ref: "./delete_late_accounting_date_rule.yaml"
+  # {{/if}}
+
