--- a/resources/public/api/conf/2.0/delete_late_accounting_date_rule.yaml
+++ b/resources/public/api/conf/2.0/delete_late_accounting_date_rule.yaml
@@ -1,133 +1,134 @@
-summary: Delete Late Accounting Date Rule
-description: |
-  Allows a customer to withdraw an election to disapply the automatic Late Accounting Date Rule treatment for a given tax year. This setting cannot be changed after finalisation (except when submitting post finalisation amendments) and will remain in place for 5 years. A National Insurance number, business ID and tax year must be provided.
+delete:
+  summary: Delete Late Accounting Date Rule
+  description: |
+    Allows a customer to withdraw an election to disapply the automatic Late Accounting Date Rule treatment for a given tax year. This setting cannot be changed after finalisation (except when submitting post finalisation amendments) and will remain in place for 5 years. A National Insurance number, business ID and tax year must be provided.
+    
+    ### Test data
+    Scenario simulation using Gov-Test-Scenario headers is only available in the sandbox environment.
+    
+    | Header Value (Gov-Test-Scenario) | Scenario                                                                                        |
+    |----------------------------------|-------------------------------------------------------------------------------------------------|
+    | N/A - DEFAULT                    | Simulates a successful response.                                                                |
+    | NOT_FOUND                        | Simulates the scenario where no data is found.                                                  |
+    | ELECTION_PERIOD_NOT_EXPIRED      | Simulates the scenario where the existing status has not expired.                               |
+    | OUTSIDE_AMENDMENT_WINDOW         | Simulates the scenario where request cannot be completed as it is outside the amendment window. |
+    | STATEFUL                         | Performs a stateful delete.                                                                     |
   
-  ### Test data
-  Scenario simulation using Gov-Test-Scenario headers is only available in the sandbox environment.
-  
-  | Header Value (Gov-Test-Scenario) | Scenario                                                                                        |
-  |----------------------------------|-------------------------------------------------------------------------------------------------|
-  | N/A - DEFAULT                    | Simulates a successful response.                                                                |
-  | NOT_FOUND                        | Simulates the scenario where no data is found.                                                  |
-  | ELECTION_PERIOD_NOT_EXPIRED      | Simulates the scenario where the existing status has not expired.                               |
-  | OUTSIDE_AMENDMENT_WINDOW         | Simulates the scenario where request cannot be completed as it is outside the amendment window. |
-  | STATEFUL                         | Performs a stateful delete.                                                                     |
 
+  tags:
+    - Late Accounting Date Rule
 
-tags:
-  - Late Accounting Date Rule
+  parameters:
+    - $ref: './common/pathParameters.yaml#/components/parameters/nino'
+    - $ref: './common/pathParameters.yaml#/components/parameters/businessId'
+    - $ref: './common/pathParameters.yaml#/components/parameters/taxYearMinimum2025'
+    - $ref: './common/headers.yaml#/components/parameters/acceptHeader'
+    - $ref: './common/headers.yaml#/components/parameters/authorizationWriteScopeHeader'
+    - $ref: './common/headers.yaml#/components/parameters/testScenarioHeader'
 
-parameters:
-  - $ref: './common/pathParameters.yaml#/components/parameters/nino'
-  - $ref: './common/pathParameters.yaml#/components/parameters/businessId'
-  - $ref: './common/pathParameters.yaml#/components/parameters/taxYearMinimum2025'
-  - $ref: './common/headers.yaml#/components/parameters/acceptHeader'
-  - $ref: './common/headers.yaml#/components/parameters/authorizationWriteScopeHeader'
-  - $ref: './common/headers.yaml#/components/parameters/testScenarioHeader'
+  security:
+    - User-Restricted:
+        - write:self-assessment
 
-security:
-  - User-Restricted:
-      - write:self-assessment
+  responses:
+    "204":
+      description: No Content
+      headers:
+        X-CorrelationId:
+          $ref: './common/headers.yaml#/components/parameters/correlationId'
+        Deprecation:
+          $ref: './common/headers.yaml#/components/parameters/deprecationHeader'
+        Sunset:
+          $ref: './common/headers.yaml#/components/parameters/sunsetHeader'
+        Link:
+          $ref: './common/headers.yaml#/components/parameters/linkHeader'
 
-responses:
-  "204":
-    description: No Content
-    headers:
-      X-CorrelationId:
-        $ref: './common/headers.yaml#/components/parameters/correlationId'
-      Deprecation:
-        $ref: './common/headers.yaml#/components/parameters/deprecationHeader'
-      Sunset:
-        $ref: './common/headers.yaml#/components/parameters/sunsetHeader'
-      Link:
-        $ref: './common/headers.yaml#/components/parameters/linkHeader'
+    "400":
+      description: Bad request
+      headers:
+        X-CorrelationId:
+          $ref: './common/headers.yaml#/components/parameters/correlationId'
+        Deprecation:
+          $ref: './common/headers.yaml#/components/parameters/deprecationHeader'
+        Sunset:
+          $ref: './common/headers.yaml#/components/parameters/sunsetHeader'
+        Link:
+          $ref: './common/headers.yaml#/components/parameters/linkHeader'
+      content:
+        application/json:
+          schema:
+            $ref: './schemas/error_response.yaml'
+          examples:
+            FORMAT_NINO:
+              $ref: './common/errors.yaml#/components/examples/formatNino'
+            FORMAT_TAX_YEAR:
+              $ref: './common/errors.yaml#/components/examples/formatTaxYear'
+            FORMAT_BUSINESS_ID:
+              $ref: './common/errors.yaml#/components/examples/formatBusinessId'
+            RULE_TAX_YEAR_RANGE_INVALID:
+              $ref: './common/errors.yaml#/components/examples/ruleTaxYearRangeInvalid'
+            RULE_TAX_YEAR_NOT_SUPPORTED:
+              $ref: './common/errors.yaml#/components/examples/ruleTaxYearNotSupported'
+            RULE_TAX_YEAR_NOT_ENDED:
+              $ref: './common/errors.yaml#/components/examples/ruleTaxYearNotEnded'
+            RULE_OUTSIDE_AMENDMENT_WINDOW:
+              $ref: './common/errors.yaml#/components/examples/ruleOutsideAmendmentWindow'
+            RULE_INCORRECT_GOV_TEST_SCENARIO:
+              $ref: './common/errors.yaml#/components/examples/ruleIncorrectGovTestScenario'
 
-  "400":
-    description: Bad request
-    headers:
-      X-CorrelationId:
-        $ref: './common/headers.yaml#/components/parameters/correlationId'
-      Deprecation:
-        $ref: './common/headers.yaml#/components/parameters/deprecationHeader'
-      Sunset:
-        $ref: './common/headers.yaml#/components/parameters/sunsetHeader'
-      Link:
-        $ref: './common/headers.yaml#/components/parameters/linkHeader'
-    content:
-      application/json:
-        schema:
-          $ref: './schemas/error_response.yaml'
-        examples:
-          FORMAT_NINO:
-            $ref: './common/errors.yaml#/components/examples/formatNino'
-          FORMAT_TAX_YEAR:
-            $ref: './common/errors.yaml#/components/examples/formatTaxYear'
-          FORMAT_BUSINESS_ID:
-            $ref: './common/errors.yaml#/components/examples/formatBusinessId'
-          RULE_TAX_YEAR_RANGE_INVALID:
-            $ref: './common/errors.yaml#/components/examples/ruleTaxYearRangeInvalid'
-          RULE_TAX_YEAR_NOT_SUPPORTED:
-            $ref: './common/errors.yaml#/components/examples/ruleTaxYearNotSupported'
-          RULE_TAX_YEAR_NOT_ENDED:
-            $ref: './common/errors.yaml#/components/examples/ruleTaxYearNotEnded'
-          RULE_OUTSIDE_AMENDMENT_WINDOW:
-            $ref: './common/errors.yaml#/components/examples/ruleOutsideAmendmentWindow'
-          RULE_INCORRECT_GOV_TEST_SCENARIO:
-            $ref: './common/errors.yaml#/components/examples/ruleIncorrectGovTestScenario'
+    "403":
+      description: Forbidden
+      headers:
+        X-CorrelationId:
+          $ref: './common/headers.yaml#/components/parameters/correlationId'
+        Deprecation:
+          $ref: './common/headers.yaml#/components/parameters/deprecationHeader'
+        Sunset:
+          $ref: './common/headers.yaml#/components/parameters/sunsetHeader'
+        Link:
+          $ref: './common/headers.yaml#/components/parameters/linkHeader'
+      content:
+        application/json:
+          schema:
+            $ref: './schemas/error_response.yaml'
+          examples:
+            CLIENT_OR_AGENT_NOT_AUTHORISED:
+              $ref: './common/errors.yaml#/components/examples/clientOrAgentNotAuthorised'
 
-  "403":
-    description: Forbidden
-    headers:
-      X-CorrelationId:
-        $ref: './common/headers.yaml#/components/parameters/correlationId'
-      Deprecation:
-        $ref: './common/headers.yaml#/components/parameters/deprecationHeader'
-      Sunset:
-        $ref: './common/headers.yaml#/components/parameters/sunsetHeader'
-      Link:
-        $ref: './common/headers.yaml#/components/parameters/linkHeader'
-    content:
-      application/json:
-        schema:
-          $ref: './schemas/error_response.yaml'
-        examples:
-          CLIENT_OR_AGENT_NOT_AUTHORISED:
-            $ref: './common/errors.yaml#/components/examples/clientOrAgentNotAuthorised'
+    "404":
+      description: Not Found
+      headers:
+        X-CorrelationId:
+          $ref: './common/headers.yaml#/components/parameters/correlationId'
+        Deprecation:
+          $ref: './common/headers.yaml#/components/parameters/deprecationHeader'
+        Sunset:
+          $ref: './common/headers.yaml#/components/parameters/sunsetHeader'
+        Link:
+          $ref: './common/headers.yaml#/components/parameters/linkHeader'
+      content:
+        application/json:
+          schema:
+            $ref: './schemas/error_response.yaml'
+          examples:
+            MATCHING_RESOURCE_NOT_FOUND:
+              $ref: './common/errors.yaml#/components/examples/notFound'
 
-  "404":
-    description: Not Found
-    headers:
-      X-CorrelationId:
-        $ref: './common/headers.yaml#/components/parameters/correlationId'
-      Deprecation:
-        $ref: './common/headers.yaml#/components/parameters/deprecationHeader'
-      Sunset:
-        $ref: './common/headers.yaml#/components/parameters/sunsetHeader'
-      Link:
-        $ref: './common/headers.yaml#/components/parameters/linkHeader'
-    content:
-      application/json:
-        schema:
-          $ref: './schemas/error_response.yaml'
-        examples:
-          MATCHING_RESOURCE_NOT_FOUND:
-            $ref: './common/errors.yaml#/components/examples/notFound'
-
-  "422":
-    description: Unprocessable Entity
-    headers:
-      X-CorrelationId:
-        $ref: './common/headers.yaml#/components/parameters/correlationId'
-      Deprecation:
-        $ref: './common/headers.yaml#/components/parameters/deprecationHeader'
-      Sunset:
-        $ref: './common/headers.yaml#/components/parameters/sunsetHeader'
-      Link:
-        $ref: './common/headers.yaml#/components/parameters/linkHeader'
-    content:
-      application/json:
-        schema:
-          $ref: './schemas/error_response.yaml'
-        examples:
-          RULE_ELECTION_PERIOD_NOT_EXPIRED:
-            $ref: './common/errors.yaml#/components/examples/ruleElectionPeriodNotExpired'
+    "422":
+      description: Unprocessable Entity
+      headers:
+        X-CorrelationId:
+          $ref: './common/headers.yaml#/components/parameters/correlationId'
+        Deprecation:
+          $ref: './common/headers.yaml#/components/parameters/deprecationHeader'
+        Sunset:
+          $ref: './common/headers.yaml#/components/parameters/sunsetHeader'
+        Link:
+          $ref: './common/headers.yaml#/components/parameters/linkHeader'
+      content:
+        application/json:
+          schema:
+            $ref: './schemas/error_response.yaml'
+          examples:
+            RULE_ELECTION_PERIOD_NOT_EXPIRED:
+              $ref: './common/errors.yaml#/components/examples/ruleElectionPeriodNotExpired'
