Disapply Late Accounting Date Rule OAS

--- a/resources/public/api/conf/2.0/disapply_late_accounting_date_rule.yaml
+++ b/resources/public/api/conf/2.0/disapply_late_accounting_date_rule.yaml
@@ -14,7 +14,7 @@ post:
     | ELECTION_PERIOD_NOT_EXPIRED      | Simulates the scenario where the existing status has not expired.                               |
     | OUTSIDE_AMENDMENT_WINDOW         | Simulates the scenario where request cannot be completed as it is outside the amendment window. |
     | TYPE_OF_BUSINESS_INCORRECT       | Simulates the scenario where the type of business is incorrect.                                 |
-    | STATEFUL                         | Performs a stateful disapplication                                                              |
+    | STATEFUL                         | Performs a stateful disapplication.                                                             |
   
 
   tags:
