--- a/resources/public/api/conf/2.0/common/pathParameters.yaml
+++ b/resources/public/api/conf/2.0/common/pathParameters.yaml
@@ -40,6 +40,17 @@ components:
         pattern: ^2[0-9]{3}-[0-9]{2}$
         example: "2024-25"
       required: true
+    taxYearNoMinimum:
+      name: taxYear
+      in: path
+      description: |
+        The tax year the data applies to. The start year and end year must not span two tax years. 
+        No gaps are allowed, for example, 2025-27 is not valid.
+      schema:
+        type: string
+        pattern: ^2[0-9]{3}-[0-9]{2}$
+        example: "2024-25"
+      required: true
     taxYearMinimum2025:
       name: taxYear
       in: path
