--- a/conf/application.conf
+++ b/conf/application.conf
@@ -88,6 +88,7 @@ api {
     }
     endpoints.released-in-production {
       disapply-late-accounting-date-rule = false
+      withdraw-late-accounting-date-rule = false
     }
   }
 
