[MTDSA-30967]: COntroller and IT changes for Disapply LADR

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -106,6 +106,7 @@ api {
     retrieve-accounting-type = false
     create-or-update-periods-of-account = true
     retrieve-periods-of-account = true
+    disapply-late-accounting-date-rule= true
   }
 
 
