[MTDSA-30967]: Unit testing coltrollers for withdraw LADR

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -107,6 +107,7 @@ api {
     create-or-update-periods-of-account = true
     retrieve-periods-of-account = true
     disapply-late-accounting-date-rule= true
+    withdraw-late-accounting-date-rule= true
   }
 
 
