--- a/resources/public/api/conf/2.0/common/pathParameters.yaml
+++ b/resources/public/api/conf/2.0/common/pathParameters.yaml
@@ -19,6 +19,15 @@ components:
         pattern: ^X[A-Z0-9]{1}IS[0-9]{11}$
         example: XAIS12345678910
       required: true
+    selfEmploymentBusinessId:
+      name: businessId
+      in: path
+      description: |
+        A unique identifier for the self-employment business. It must conform to the following regex: `^X[A-Z0-9]{1}IS[0-9]{11}$`
+      schema:
+        type: string
+        pattern: ^X[A-Z0-9]{1}IS[0-9]{11}$
+        example: XAIS12345678910
     taxYear:
       name: taxYear
       in: path
@@ -38,7 +47,7 @@ components:
       schema:
         type: string
         pattern: ^2[0-9]{3}-[0-9]{2}$
-        example: "2024-25"
+        example: "2025-26"
       required: true
     taxYearNoMinimum:
       name: taxYear
