MTD APIs: config to enable [test-only] flags on specific endpoints

--- a/resources/public/api/conf/2.0/accounting_type.yaml
+++ b/resources/public/api/conf/2.0/accounting_type.yaml
@@ -1,13 +1,13 @@
 get:
   $ref: "./retrieve_accounting_type.yaml"
-  summary: Retrieve Accounting Type
+  summary: Retrieve Accounting Type {{#maybeTestOnly "2.0 retrieve-accounting-type"}}{{/maybeTestOnly}}
   security:
     - User-Restricted:
         - read:self-assessment
 
 put:
   $ref: "./update_accounting_type.yaml"
-  summary: Update Accounting Type
+  summary: Update Accounting Type {{#maybeTestOnly "2.0 update-accounting-type"}}{{/maybeTestOnly}}
   security:
     - User-Restricted:
         - write:self-assessment
