update config values

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -83,16 +83,16 @@ api {
     status = "BETA"
     endpoints {
         enabled = true
-        api-released-in-production = false
+        api-released-in-production = true
         allow-request-cannot-be-fulfilled-header = true
     }
     endpoints.released-in-production {
-      disapply-late-accounting-date-rule = false
-      withdraw-late-accounting-date-rule = false
-      update-accounting-type = false
-      retrieve-accounting-type = false
-      create-update-periods-of-account = false
-      retrieve-periods-of-account = false
+      disapply-late-accounting-date-rule = true
+      withdraw-late-accounting-date-rule = true
+      update-accounting-type = true
+      retrieve-accounting-type = true
+      create-update-periods-of-account = true
+      retrieve-periods-of-account = true
     }
   }
 
