--- a/conf/application.conf
+++ b/conf/application.conf
@@ -82,13 +82,13 @@ api {
   2.0 {
     status = "BETA"
     endpoints {
-        enabled = true
-        api-released-in-production = true
-        allow-request-cannot-be-fulfilled-header = true
-    }
-    endpoints.released-in-production {
-      disapply-late-accounting-date-rule = false
-      withdraw-late-accounting-date-rule = false
+      enabled = true
+      api-released-in-production = false
+      allow-request-cannot-be-fulfilled-header = true
+      released-in-production {
+        disapply-late-accounting-date-rule = false
+        withdraw-late-accounting-date-rule = false
+      }
     }
   }
 
