[MTDSA-31123]: Controller specs and app.conf changes

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -88,6 +88,7 @@ api {
       released-in-production {
         disapply-late-accounting-date-rule = false
         withdraw-late-accounting-date-rule = false
+        retrieve-late-accounting-date-rule = false
       }
     }
   }
@@ -106,8 +107,9 @@ api {
     retrieve-accounting-type = false
     create-or-update-periods-of-account = true
     retrieve-periods-of-account = true
-    disapply-late-accounting-date-rule= true
-    withdraw-late-accounting-date-rule= true
+    disapply-late-accounting-date-rule = true
+    withdraw-late-accounting-date-rule = true
+    retrieve-late-accounting-date-rule = true
   }
 
 
